plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'aopalliance:aopalliance:1.0'
    implementation 'asm:asm:1.4.1'
    implementation 'cglib:cglib:2.0.1'
    implementation 'commons-attributes:commons-attributes-api:2.1'
    implementation 'commons-lang:commons-lang:1.0'
    implementation 'commons-logging:commons-logging:1.0'
    implementation 'commons-pool:commons-pool:1.6'
    implementation 'dom4j:dom4j:1.6.1'
    implementation 'jdom:jdom:1.0'
    implementation 'log4j:log4j:1.2.8'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation 'org.mockito:mockito-inline:4.6.1'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
